feat: removed need for dep, bumped min java to 17